REMDEV-14348: Provisorische Version 1.3.2-alpha mit Korrektur von "NaturalPerson ". Jonas wird am Ende von KW 08 die echte Version 1.3.2 releasen. Die Versionnummer wird dann den Prinzipen der semantischen Versionierung folgen.
