# lib/SwisseldexAumImmo/models/upload_message_extension.rb
@@ -3,7 +3,7 @@
 
 #No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
 
-OpenAPI spec version: 1.3
+OpenAPI spec version: 1.3.2-alpha
 
 Generated by: https://github.com/swagger-api/swagger-codegen.git
 Swagger Codegen version: 3.0.33
@@ -159,7 +159,7 @@ module SwisseldexAumImmo
     # Check to see if the all the properties in the model are valid
     # @return true if the model is valid
     def valid?
-      person_type_validator = EnumAttributeValidator.new('Object', ['LegalPerson', 'NaturalPerson ', 'null'])
+      person_type_validator = EnumAttributeValidator.new('Object', ['LegalPerson', 'NaturalPerson', 'null'])
       return false unless person_type_validator.valid?(@person_type)
       true
     end
@@ -167,7 +167,7 @@ module SwisseldexAumImmo
     # Custom attribute writer method checking allowed values (enum).
     # @param [Object] person_type Object to be assigned
     def person_type=(person_type)
-      validator = EnumAttributeValidator.new('Object', ['LegalPerson', 'NaturalPerson ', 'null'])
+      validator = EnumAttributeValidator.new('Object', ['LegalPerson', 'NaturalPerson', 'null'])
       unless validator.valid?(person_type)
         fail ArgumentError, "invalid value for \"person_type\", must be one of #{validator.allowable_values}."
       end
